--- a/public/html/header.html
+++ b/public/html/header.html
@@ -21,9 +21,9 @@
             Collections
             <div class="overlayMenu">
                 <ul>
-                    <a href="../../html/category/audio.html"><li>Audio</li></a>
-                    <a href="../../html/category/watch.html"><li>Watch</li></a>
-                    <a href="../../html/category/bags.html"><li>Bags</li></a>
+                    <a href="#!/category/Audio"><li>Audio</li></a>
+                    <a href="#!/category/Watch"><li>Watch</li></a>
+                    <a href="#!/category/Bag"><li>Bags</li></a>
                 </ul>
             </div>
         </li>
